--- a/demo-learning/angular.json
+++ b/demo-learning/angular.json
@@ -8,7 +8,7 @@
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "ss",
+      "prefix": "sss",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
